# whisper-openapi

./: Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  webservice.py
app/: config.py
